# gestus

./: CMakeLists.txt  GettingStarted.md  MainPage.md  ProjectHome.md  README  TODO.txt
Work_by_group_794_2012/: README.txt
Work_by_group_794_2012/src/: CMakeLists.txt  detector.cpp  example.cpp  objectDetection.cpp  qd.h
bin.win32.debug/: example_OpenCV_02.ilk  example_OpenCV_03.ilk
bin.win32.release/: readme.txt
lib/win32.vc/debug/: opencv_calib3d230d.lib  opencv_flann230d.lib  opencv_gpu230d.lib  opencv_haartraining_engined.lib  opencv_imgproc230d.lib  opencv_ml230d.lib  opencv_video230d.lib
lib/win32.vc/release/: opencv_calib3d230.lib  opencv_contrib230.lib  opencv_core230.lib  opencv_features2d230.lib  opencv_flann230.lib  opencv_gpu230.lib  opencv_highgui230.lib  opencv_legacy230.lib  opencv_video230.lib
prj.sandbox/: CMakeLists.txt
prj.sandbox/ImageProcessorTest/image/: image.cpp  opencv.h
prj.sandbox/example_OpenCV_01/: CMakeLists.txt
prj.sandbox/example_OpenCV_01/src/: example.h  example_OpenCV_01.cpp  example_OpenCV_01_1.cpp  example_OpenCV_01_3.cpp  example_OpenCV_01_4.cpp  example_OpenCV_01_5.cpp
prj.sandbox/example_OpenCV_02/: CMakeLists.txt
prj.sandbox/example_OpenCV_02/src/: example_OpenCV_02.cpp  example_OpenCV_02_2.cpp  example_OpenCV_02_3.cpp
prj.sandbox/example_OpenCV_03/src/: example_OpenCV_03.cpp  example_OpenCV_03_1.cpp
prj.sandbox/example_OpenCV_04/src/: example_OpenCV_04.cpp  example_OpenCV_04_1.cpp
prj.sandbox/example_OpenCV_05/: CMakeLists.txt
prj.sandbox/example_OpenCV_05/src/: example_OpenCV_05.cpp
prj.thirdparty/: readme.txt
prj.tools/: CMakeLists.txt  CMakeLists2.txt  index.txt  index2.txt
prj.tools/cam2avi/: CMakeLists.txt
prj.tools/gestusCam/: CMakeLists.txt
prj.tools/listvideo/: CMakeLists.txt
prj.tools/listvideo/src/: listvideo.cpp
src/: file.c
testdata/blink/: 001.avi  Thumbs.db
testdata/openhand/: 001.avi  Thumbs.db
testdata/smile/: 001.avi  Thumbs.db
testdata/tsss/: 001.avi  Thumbs.db
testdata/wink/: 001.avi  Thumbs.db
trunk/: CMakeLists.txt  CMakeLists2.txt  README
trunk/Work_by_group_794_2012/: CMakeLists.txt
trunk/Work_by_group_794_2012/src/: CMakeLists.txt  detector.cpp  objectDetection2.cpp
trunk/bin.win32.debug/: example_OpenCV_01.ilk  example_opencv_01.idb  example_opencv_02.idb  example_opencv_03.idb  readme.txt
trunk/lib/win32.vc/debug/: opencv_contrib230d.lib  opencv_core230d.lib  opencv_features2d230d.lib  opencv_highgui230d.lib  opencv_legacy230d.lib  opencv_objdetect230d.lib
trunk/lib/win32.vc/release/: opencv_haartraining_engine.lib  opencv_imgproc230.lib  opencv_ml230.lib  opencv_objdetect230.lib
trunk/prj.sandbox/: CMakeLists.txt  index.txt
trunk/prj.sandbox/ImageProcessorTest/: image.sln
trunk/prj.sandbox/ImageProcessorTest/image/: image.vcproj
trunk/prj.sandbox/example_OpenCV_01/: CMakeLists.txt
trunk/prj.sandbox/example_OpenCV_01/src/: example_OpenCV_01.cpp  example_OpenCV_01_1.cpp  example_OpenCV_01_2.cpp  example_OpenCV_01_5.cpp
trunk/prj.sandbox/example_OpenCV_02/: CMakeLists.txt
trunk/prj.sandbox/example_OpenCV_02/src/: example_OpenCV_02.cpp  example_OpenCV_02_1.cpp  example_OpenCV_02_4.cpp  example_OpenCV_02_5.cpp
trunk/prj.sandbox/example_OpenCV_03/: CMakeLists.txt
trunk/prj.sandbox/example_OpenCV_03/src/: example_OpenCV_03.cpp  example_OpenCV_03_2.cpp  example_OpenCV_03_3.cpp
trunk/prj.sandbox/example_OpenCV_04/: CMakeLists.txt
trunk/prj.sandbox/example_OpenCV_04/src/: example_OpenCV_04.cpp  example_OpenCV_04_2.cpp
trunk/prj.sandbox/example_OpenCV_05/src/: example_OpenCV_05.cpp  example_OpenCV_05_1.cpp  example_OpenCV_05_2.cpp  example_OpenCV_05_3.cpp
trunk/prj.thirdparty/opencv2/ml/: ml.hpp
trunk/prj.tools/: index2.txt
trunk/prj.tools/cam2avi/src/: cam2avi.cpp
trunk/prj.tools/gestusCam/src/: gestusCam.cpp
wiki/: GettingStarted.wiki  MainPage.wiki  Main_Page.wiki  PageName.wiki
